--- a/css/styles.css
+++ b/css/styles.css
@@ -723,7 +723,7 @@ padding-top: 96px;
 }
 
 
-
+/****************************ДЛЯ АКТИВНОЇ СТОРІНКИ****************/
 .active-page {
     position: relative;
 }
