--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@
     --team-soc-bg-hover: #404BBF;
     --strategy-icon-bg: #F4F4FD;
     --bg-active-page: #404BBF;
+    --result-fly-text-color: #F4F4FD;
 }
 /*КОЛЬОРОВІ ЗМІННІ
 --main-btn-bg: #4D5AE5; головна заливка кнопки
@@ -685,6 +686,7 @@ padding-top: 96px;
 }
 
 .result-link {
+    
     display: block;
     transition-duration: 250ms;
     transition-property: box-shadow;
@@ -696,6 +698,29 @@ padding-top: 96px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
     0px 1px 1px rgba(46, 47, 66, 0.16), 
     0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.result-fly-text-wrap {
+    position: relative;
+    overflow: hidden;
+}
+
+.result-fly-text {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    padding: 40px 32px 0;
+    background-color: #4D5AE5;;
+    font-size: 16px;
+    line-height: 1.5;;
+    color: var(--result-fly-text-color, #F4F4FD);
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    overflow: auto;
+}
+
+.result-link:hover .result-fly-text {
+    transform: translateY(0);
 }
 
 .portfolio-card-padding {
