--- a/css/styles.css
+++ b/css/styles.css
@@ -241,7 +241,7 @@ body {
     justify-content: center;
     
     margin: 0 auto;
-    border: 1px solid #4D5AE5;
+    border: 1px solid transparent;
     border-radius: 4px;
     min-width: 169px;    
     padding: 16px 32px;
@@ -249,13 +249,12 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
     transition-duration: 250ms;
-    transition-property: background-color, border;
+    transition-property: background-color;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-btn:hover,
 .hero-btn:focus {
     background-color: var(--btn-bg-in-hover, #404BBF);
-    border: 1px solid transparent;
 }
 
 /**-------------------------------STRATEGY----------------------------*/
@@ -458,16 +457,7 @@ body {
 }
 
 .customer-list-link {
-    
-}
-
-
-.customer-list-link:hover .customers-icon,
-.customer-list-link:focus .customers-icon {
-    fill: #404BBF;
-}
-
-.customer-wrapper {
+    display: block;
     padding: 16px 32px;
     border: 1px solid #8E8F99;
     border-radius: 4px;
@@ -477,9 +467,14 @@ body {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.customer-wrapper:hover,
-.customer-wrapper:focus {
+.customer-list-link:hover,
+.customer-list-link:focus {
     border: 1px solid #404BBF;
+}
+
+.customer-list-link:hover .customers-icon,
+.customer-list-link:focus .customers-icon {
+    fill: #404BBF;
 }
 
 .customers-icon {
@@ -543,16 +538,15 @@ body {
     height: 100%;
     border-radius: 50%;
     background-color: var(--footer-soc-main-bg, #4D5AE5);
-    color: var(--main-soc-icon-color, #ffffff);
+    color: var(--second-soc-icon-color, #f4f4fd);
     transition-duration: 250ms;
-    transition-property: background-color, color;
+    transition-property: background-color;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-link:hover,
 .footer-soc-link:focus {
     background-color: var(--footer-soc-seconf-bg, #31D0AA);
-    color: var(--second-soc-icon-color, #F4F4FD);
 }
 
 /* .footer-soc-link:hover .footer-soc-icon,
@@ -605,7 +599,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
-    transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -637,9 +631,25 @@ body {
     border-radius: 50%;
 
     cursor: pointer;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+    background-color: #404BBF;
+    border: 1px solid transparent;
 }
 
 .modal-close {
+    fill: #2E2F42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn:hover .modal-close,
+.modal-close-btn:focus .modal-close{
+    fill: #ffffff;
 }
 
 .is-hidden {
@@ -709,7 +719,7 @@ padding-top: 96px;
     padding: 12px 24px;
 
     transition-duration: 250ms;
-    transition-property: background-color, color, border, box-shadow;
+    transition-property: background-color, color, border-color, box-shadow;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -717,7 +727,7 @@ padding-top: 96px;
 .filter-list-btn:focus {
     background-color: var(--btn-bg-in-hover, #404BBF);
     color: var(--main-btn-color, #FFFFFF);
-    border: 1px solid transparent;
+    border-color: transparent;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 
     0px 2px 1px rgba(0, 0, 0, 0.08), 
     0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -808,6 +818,7 @@ padding-top: 96px;
 /****************************ДЛЯ АКТИВНОЇ СТОРІНКИ****************/
 .active-page {
     position: relative;
+    color: var(--btn-bg-in-hover, #404BBF);
 }
 
 .active-page::after {
@@ -817,7 +828,7 @@ padding-top: 96px;
     width: 100%;
     height: 4px;
     /* top: 68px; */
-    bottom: 0;
+    bottom: -1px;
     background-color: var(--bg-active-page, #404BBF);
     border-radius: 2px;
 }
